--- a/笔记.MD
+++ b/笔记.MD
@@ -2334,9 +2334,21 @@ git archive
 
 
 
+### 一般提交流程
+
+```shell
+git add [dir]/[file1] [file2] ...
+git commit -a -m [message]
+git push [remote] [branch]
+```
+
+
+
 ### SSH 免密登录
 
 1. ssh-keygen -t rsa -b 4096 -C "*your_email@example.com*"
+1. cat ~/.ssh/id_rsa.pub
+1. github -> settings -> SSH keys 添加公钥
 
 
 
