--- a/笔记.MD
+++ b/笔记.MD
@@ -2151,7 +2151,7 @@ git branch -d [branch-name]
 git push origin --delete [branch-name]
 git branch -dr [remote/branch]
 
-# 对已经存在的branch重名
+# 对已经存在的branch重命名
 git branch -m
 ```
 
@@ -2276,13 +2276,18 @@ git remote add [shortname] [url]
 git pull [remote] [branch]
 
 # 上传本地指定分支到远程仓库
-git push [remote] [branch]
+git push <远程主机名> <本地分支名>:<远程分支名>
+
+# 地分支名与远程分支名相同，则可以省略冒号：
+git push <远程主机名> <本地分支名>
 
 # 强行推送当前分支到远程仓库，即使有冲突
-git push [remote] --force
+git push --force <远程主机名> <本地分支名>
 
 # 推送所有分支到远程仓库
-git push [remote] --all
+git push --all <远程主机名>
+
+git push [remote] 
 ```
 
 
@@ -2339,7 +2344,7 @@ git archive
 ```shell
 git add [dir]/[file1] [file2] ...
 git commit -a -m [message]
-git push [remote] [branch]
+git push <远程主机名> <本地分支名>
 ```
 
 
