--- a/笔记.MD
+++ b/笔记.MD
@@ -2151,8 +2151,8 @@ git branch -d [branch-name]
 git push origin --delete [branch-name]
 git branch -dr [remote/branch]
 
-# 对已经存在的branch重命名
-git branch -m
+# 对已经存在的branch重命名，如果newbranch名字已经存在，则需要使用-M强制重命名，否则，使用-m进行重命名。
+git branch -m|-M oldbranch  newbranch
 ```
 
 
