--- a/笔记.MD
+++ b/笔记.MD
@@ -708,7 +708,7 @@ int sameCount = count(Wrappers.<RulePO>lambdaQuery()
 
 ## ResultMap
 
-### 一对一
+
 
 ```xml
 <!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
@@ -717,89 +717,35 @@ int sameCount = count(Wrappers.<RulePO>lambdaQuery()
     <resultMap id="resultMapId" type="vo.package">
         <id column="ID" jdbcType="BIGINT" property="id" />
         <result column="NAME" jdbcType="VARCHAR" property="name" />
+        <!-- 一对一 -->
         <association property="wife" javaType="wife.vo.package">
-            <result column="R_PATROL_CYCLE" jdbcType="VARCHAR" property="patrolCycle"/>
-            <result column="R_PATROL_MODE" jdbcType="VARCHAR" property="patrolMode"/>
-            <result column="R_COMPLETE_TYPE" jdbcType="VARCHAR" property="completeType"/>
-            <result column="R_ACCURATE_TYPE" jdbcType="VARCHAR" property="accurateType"/>
-            <result column="R_ON_TIME_TYPE" jdbcType="VARCHAR" property="onTimeType"/>
-            <result column="R_COMPLETE_TARGET" jdbcType="VARCHAR" property="completeTarget"/>
-            <result column="R_COMPLETE_RESULT" jdbcType="VARCHAR" property="completeResult"/>
-            <result column="R_COMPLETE_ISSUE_POSITION" jdbcType="VARCHAR" property="completeIssuePosition"/>
-            <result column="R_ACCURATE_TARGET" jdbcType="VARCHAR" property="accurateTarget"/>
-            <result column="R_ACCURATE_RESULT" jdbcType="VARCHAR" property="accurateResult"/>
-            <result column="R_ACCURATE_ISSUE_POSITION" jdbcType="VARCHAR" property="accurateIssuePosition"/>
-            <result column="R_ON_TIME_TARGET" jdbcType="VARCHAR" property="onTimeTarget"/>
-            <result column="R_ON_TIME_RESULT" jdbcType="VARCHAR" property="onTimeResult"/>
-            <result column="R_ON_TIME_ISSUE_POSITION" jdbcType="VARCHAR" property="onTimeIssuePosition"/>
-            <result column="R_CITY_DIMENSION" jdbcType="VARCHAR" property="cityDimension"/>
-            <result column="R_GRANULARITY" jdbcType="VARCHAR" property="granularity"/>
-            <result column="R_BUSINESS_DIMENSION" jdbcType="VARCHAR" property="businessDimension"/>
-            <result column="R_REMARK" jdbcType="VARCHAR" property="remark"/>
-            <result column="R_CREATED_TIME" jdbcType="DATE" property="createdTime"/>
-            <result column="R_UPDATE_TIME" jdbcType="DATE" property="updateTime"/>
+            <result column="WIFE_ID" jdbcType="BIGINT" property="wifeId"/>
+            <result column="WIFE_NAME" jdbcType="VARCHAR" property="wifeName"/>
         </association>
-        <collection property="tableList" column="{MODULE_ID=ID, ENV=ENV}" javaType="ArrayList"
-                    select="listModuleTable" />
-        <collection property="granularityList" column="{MODULE_ID=ID, ENV=ENV}" javaType="ArrayList"
-                    select="listModuleGranularity" />
-        <collection property="zoneList" column="{MODULE_ID=ID, ENV=ENV}" javaType="ArrayList"
-                    select="listModuleZone" />
-        <collection property="appsubList" column="{MODULE_ID=ID, ENV=ENV}" javaType="ArrayList"
-                    select="listModuleAppsub" />
+        <!-- 一对多 -->
+        <collection property="carList" column="{PEOPLE_ID=ID}" javaType="ArrayList"
+                    select="listCar" />
     </resultMap>
 
     <select id="list" resultMap="resultMapId">
         select
-            module_join.ID,
-            module_join.NAME,
-            module_join.PATROL_DIMENSION_TYPE,
-            module_join.COMPLETE_STATIC_TYPE,
-            module_join.ACCURATE_STATIC_TYPE,
-            module_join.ON_TIME_STATIC_TYPE,
-            module_join.DAY_OFFSET,
-            module_join.ENV,
-            module_join.REMARK,
-            module_join.STATUS,
-            module_join.CREATED_TIME,
-            module_join.UPDATE_TIME,
-            remark_join.PATROL_CYCLE        AS R_PATROL_CYCLE,
-            remark_join.PATROL_MODE         AS R_PATROL_MODE,
-            remark_join.COMPLETE_TYPE       AS R_COMPLETE_TYPE,
-            remark_join.ACCURATE_TYPE       AS R_ACCURATE_TYPE,
-            remark_join.ON_TIME_TYPE        AS R_ON_TIME_TYPE,
-            remark_join.COMPLETE_TARGET     AS R_COMPLETE_TARGET,
-            remark_join.COMPLETE_RESULT     AS R_COMPLETE_RESULT,
-            remark_join.COMPLETE_ISSUE_POSITION AS R_COMPLETE_ISSUE_POSITION,
-            remark_join.ACCURATE_TARGET     AS R_ACCURATE_TARGET,
-            remark_join.ACCURATE_RESULT     AS R_ACCURATE_RESULT,
-            remark_join.ACCURATE_ISSUE_POSITION AS R_ACCURATE_ISSUE_POSITION,
-            remark_join.ON_TIME_TARGET      AS R_ON_TIME_TARGET,
-            remark_join.ON_TIME_RESULT      AS R_ON_TIME_RESULT,
-            remark_join.ON_TIME_ISSUE_POSITION AS R_ON_TIME_ISSUE_POSITION,
-            remark_join.CITY_DIMENSION      AS R_CITY_DIMENSION,
-            remark_join.GRANULARITY         AS R_GRANULARITY,
-            remark_join.BUSINESS_DIMENSION  AS R_BUSINESS_DIMENSION,
-            remark_join.REMARK              AS R_REMARK,
-            remark_join.CREATED_TIME        AS R_CREATED_TIME,
-            remark_join.UPDATE_TIME         AS R_UPDATE_TIME
-        from D_HX_AP_MODULE module_join
-        left join D_HX_AP_MODULE_REMARK remark_join
-            on module_join.ID=remark_join.MODULE_ID
-            and module_join.env=remark_join.env
-        where module_join.status=1 and module_join.env=#{env}
-        order by module_join.ID asc
+            people_join.ID,
+            people_join.NAME,
+            wife_join.ID as WIFE_ID,
+            wife_join.NAME as WIFE_NAME
+        from PEOPLE people_join
+        left join WIFE wife_join
+            on people_join.ID=wife_join.HUSBAND_ID
+    </select>
+
+    <select id="listCar" resultMType="vo.package">
+        select 
+        	ID as id,
+        	BRAND as brand
+        from CAR where PEOPLE_ID = #{ID}
     </select>
 </mapper>
 ```
-
-
-
-### 一对多
-
-
-
-
 
 
 
@@ -2010,7 +1956,19 @@ Class<?> poClazz = (Class)types[1];
 
 ### 名词
 
-![](./note/pictures/bg2015120901.png)
+![](./pictures/bg2015120901.png)
+
+```mermaid
+graph LR
+Remote[(Remote)]
+Repository[(Repository)]
+%% Index[(Index)]
+Remote --->|fetch/clone| Repository -->|checkout| workspace
+workspace -->|commit| Repository --->|push| Remote
+%% Remote --->|pull| workspace
+```
+
+
 
 - Workspace：工作区
 - Index / Stage：暂存区
@@ -2549,10 +2507,10 @@ ROOT --> a(连线样式)
 		   ac o==o acd o==文本==o acda o==o|文本| acdb o===o|延长连线| acdc
 		   ac x==x ace x==文本==x acea x==x|文本| aceb x===x|延长连线| acec
 ROOT --> b(子图)
-	   subgraph 子图
+	   subgraph bb [子图]
 	   	sub1 --> sub2
 	   end
-	   b --> 子图
+	   b --> bb
 ```
 
 
