--- a/C1/P3/笔记.MD
+++ b/C1/P3/笔记.MD
@@ -688,9 +688,9 @@ password: postgres
 
 
 ```sql
-SELECT * from gar_resources where id>775 ORDER BY id  desc;
-SELECT * from gar_permissions where id>757 ORDER BY id  desc;
-SELECT * from gar_permissions_resources where permission_id>757 ORDER BY permission_id  desc;
+SELECT * from gar_resources where id>784 ORDER BY id  desc;
+SELECT * from gar_permissions where id>766 ORDER BY id  desc;
+SELECT * from gar_permissions_resources where permission_id>766 ORDER BY permission_id  desc;
 ```
 
 
@@ -1741,7 +1741,7 @@ from(
     left join(
         select
             users_groups_join.user_id as user_id,
-            roles_permissions_join.permission_name as permission_name
+            string_agg(roles_permissions_join.permission_name, ',') as permission_name
         from gar_users_groups users_groups_join
         left join gar_groups_roles groups_roles_join
         on users_groups_join.group_id = groups_roles_join.group_id
@@ -1752,6 +1752,7 @@ from(
         left join gar_resources resources_join
         on permissions_resources_join.resource_id = resources_join.id
         where users_groups_join.group_type = 1 and resources_join.description = '一级菜单'
+        group by users_groups_join.user_id
     ) permissions_join
     on user_join.id = permissions_join.user_id
 )temp order by username, activity_time asc
