--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -85,7 +85,7 @@ regedit
 
 ### Typora
 
-1. [下载 typora 安装包](https://typora.io/releases/all)
+1. [官网](https://typora.io/releases/all)下载 [typora 安装包](../files/typora-setup-x64-1.3.8.exe)
 2. 安装
 3. 复制 [winmm.dll](..\files\winmm.dll) 文件到 Typora.exe 平级的目录
 
@@ -97,11 +97,11 @@ regedit
 
 
 
-一、从官网https://www.navicat.com.cn/products/下载Navicat Premium 15并安装
+一、从[官网](https://www.navicat.com.cn/products/)下载[Navicat Premium 15](../files/navicat 15 premium.rar)并安装
 
 二、破解
 
-​		1、打开注册机，Patch勾选Backup、Host和Navicat v12，然后点击Patch按钮：
+​		1、打 开[注册机](..\files\navicat15Cracker.zip) ，Patch勾选Backup、Host和Navicat v12，然后点击Patch按钮：
 
 ​		2、找到Navicat For MySql安装路径下的navicat.exe，选中并点击打开此时出现如下弹窗，
 
@@ -137,11 +137,11 @@ regedit
 
 #### 16
 
-一、从官网https://www.navicat.com.cn/products/下载Navicat Premium 16并安装
+一、从[官网](https://www.navicat.com.cn/products/)下载[Navicat Premium 16](../files/navicat 16 premium.rar)并安装
 
 二、破解
 
-1、以管理员身份打开注册机，Applied Path 选择安装目录根路径后点击Patch。成功之后，提示是否将rsa私钥导出来，导不导都无所谓。此时注册机不要关闭
+1、以管理员身份打开[注册机](..\files\navicat16Cracker.zip)，Applied Path 选择安装目录根路径后点击Patch。成功之后，提示是否将rsa私钥导出来，导不导都无所谓。此时注册机不要关闭
 
 2、断网后启动navicat，试用提醒界面点击注册。
 
