--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -97,7 +97,7 @@ regedit
 
 
 
-一、从[官网](https://www.navicat.com.cn/products/)下载[Navicat Premium 15](../files/navicat 15 premium.rar)并安装
+一、从[官网](https://www.navicat.com.cn/products/)下载 Navicat Premium 15 并安装
 
 二、破解
 
@@ -137,7 +137,7 @@ regedit
 
 #### 16
 
-一、从[官网](https://www.navicat.com.cn/products/)下载[Navicat Premium 16](../files/navicat 16 premium.rar)并安装
+一、从[官网](https://www.navicat.com.cn/products/)下载 Navicat Premium 16 并安装
 
 二、破解
 
