--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -2,15 +2,42 @@
 
 ## 密钥
 
-**企业版密钥 N8XTK V4FM8 27F63 XVFP9 BKMPF**
+**win10企业版密钥 N8XTK V4FM8 27F63 XVFP9 BKMPF**
 
-**企业版密钥 8KNTW-GF66M-QJ46J-W3CKP-3YH2F**
+**win10企业版密钥 8KNTW-GF66M-QJ46J-W3CKP-3YH2F**
 
-**企业版ltsc密钥 NY6WQ-7FH9P-4T224-FK48J-33YJP**
+**win10企业版ltsc密钥 NY6WQ-7FH9P-4T224-FK48J-33YJP**
 
-**企业版ltsc密钥 DFJ6N-239D6-HD9TC-Q9TB4-7H8R2**
+**win10企业版ltsc密钥 DFJ6N-239D6-HD9TC-Q9TB4-7H8R2**
+
+**win7Ultimate密钥 BBV2J-GYP7B-V3BKC-4848Q-VMQRM**
 
 **Microsoft Office Pro Plus 2016:4QMN4-YRVM3-HBQTH-73WVQ-XHJ92**
+
+
+
+## WIN7 激活
+
+
+
+```shell
+slmgr -ipk 33PXH-7Y6KF-2VJC9-XBBR8-HVTHH
+slmgr -skms zh.us.to
+slmgr -ato
+slmgr -xpr
+```
+
+
+
+## WIN10 激活
+
+```shell
+slmgr -ipk M7XTQ-FN8P6-TTKYV-9D4CC-J462D
+# MBQRK-FNDW8-B7GF4-V9PCW-6MV77
+slmgr -skms kms.03k.org
+slmgr -ato
+slmgr -dlv
+```
 
 
 
@@ -18,36 +45,31 @@
 
 ### 安装 Microsoft Store 程序
 
-- 打开 [在线应用商店](https://apps.microsoft.com/store/apps?hl=zh-cn&gl=cn)，搜索应用程序
-- 复制要安装程序页面的 URL 地址到 [rg-adguard.net](https://store.rg-adguard.net/)，选择 Retail 后搜索
-- 下载合适自己系统的 `*Framework*.Appx`、`*Runtime*.Appx`、`*VCLibs*.Appx`、`UI.Xaml.appx`、`.AppsBundle`、`.Msixbundle` 包并放入同一个文件夹
-- 以管理员身份打开 powershell 并进入安装包目录
-- 执行 `Add-AppxPackage *`
-- 如果报错则根据报错提示解决
+1. 打开 [在线应用商店](https://apps.microsoft.com/store/apps?hl=zh-cn&gl=cn)，搜索应用程序
+2. 复制要安装程序页面的 URL 地址到 [rg-adguard.net](https://store.rg-adguard.net/)，选择 Retail 后搜索
+3. 下载合适自己系统的 `*Framework*.Appx`、`*Runtime*.Appx`、`*VCLibs*.Appx`、`UI.Xaml.appx`、`.AppsBundle`、`.Msixbundle` 包并放入同一个文件夹
+4. 以管理员身份打开 powershell 并进入安装包目录
+5. 执行 `Add-AppxPackage *`
+6. 如果报错则根据报错提示解决
 
 
 
 ### 删除 Microsoft Store 程序
 
-- 以管理员身份打开 powershell 
-- 输入 `Get-AppxPackage *WindowsStore* | Remove-AppxPackage`
+1. 以管理员身份打开 powershell 
+2. 输入 `Get-AppxPackage *WindowsStore* | Remove-AppxPackage`
 
 
 
 ### 更改程序默认安装位置
 
-
-
-regedit
-
-计算机\HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows\CurrentVersion
-
-　　ProgramFilesDir
-
-　　ProgramFilesDir (x86)
-
-　　ProgramW6432Dir
-
+1. 打开 regedit
+2. 找到计算机 `\HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows\CurrentVersion`
+    - ProgramFilesDir
+    - ProgramFilesDir (x86)
+    - ProgramW6432Dir
+3. 修改为想要安装的位置
+4. 完成
 
 
 ### 杜比音效驱动
@@ -95,64 +117,270 @@ regedit
 
 #### 15
 
-
-
-一、从[官网](https://www.navicat.com.cn/products/)下载 Navicat Premium 15 并安装
-
-二、破解
-
-​		1、打 开[注册机](..\files\navicat15Cracker.zip) ，Patch勾选Backup、Host和Navicat v12，然后点击Patch按钮：
-
-​		2、找到Navicat For MySql安装路径下的navicat.exe，选中并点击打开此时出现如下弹窗，
-
-​				提示navicat.exe - x64 -> Cracked.，提示已破解（别高兴，还没结束）
-
-​		3、
-
-​				License, Product and Language确保License为Enterprise，Products为premium ，
-
-​						Languages为English（其它语言版本请自选）；
-
-​				Resale License确保Resale Version为Site license；
-
-​				Keygen / Offline Activation中Your Name和Your Organization可以任意填写或者默认，
-
-​						然后点击Generate，将自动生成Serial Keygen（即注册码）
-
-​		4、打开Navicat For MySql，点击菜单栏的帮助，选择注册，在注册窗口键处填入上一步生成的
-
-​				Serial Keygen（即注册码），然后点击激活->点击手动激活
-
-​		5、将Navicat手动激活窗口的请求码框中内容复制到注册机Request Code框中，点击Activation Code
-
-​				下面的Generate按钮：
-
-​		6、将注册机Activation Code处生成的激活码内容复制到Navicat手动激活窗口的激活码框中
-
-​				（或点击Activation Code处下面的Copy按钮），然后点击激活按钮：
-
-​		7、提示Navicat现已激活
+1. 从[官网](https://www.navicat.com.cn/products/)下载 Navicat Premium 15 并安装
+2. 打开[注册机](..\files\navicat15Cracker.zip) ，Patch勾选Backup、Host和Navicat v12，然后点击Patch按钮
+3. 找到 Navicat 安装路径下的 navicat.exe，选中并点击打开此时出现如下弹窗：
+    - 提示navicat.exe - x64 -> Cracked.
+4. License, Product and Language 
+    - License 为 Enterprise
+    - Products 为 premium
+    - Languages为English（其它语言版本请自选）
+5. Release License 确保 Release Version 为 Site license
+6. Keygen / Offline Activation 中 Your Name 和 Your Organization 可以任意填写或者默认
+6. 点击 Generate，将自动生成 Serial Keygen（即注册码）
+7. 打开 Navicat ，点击菜单栏的帮助，选择注册，在注册窗口键处填入生成的 Serial Keygen（即注册码）
+8. 点击激活 -> 点击手动激活
+9. 将 Navicat 手动激活窗口的请求码框中内容复制到注册机 Request Code 框中，点击 Activation Code 下面的Generate按钮
+10. 将注册机 Activation Code 处生成的激活码内容复制到 Navicat 手动激活窗口的激活码框中
+11. 点击激活按钮
+12. 提示Navicat现已激活
 
 
 
 #### 16
 
-一、从[官网](https://www.navicat.com.cn/products/)下载 Navicat Premium 16 并安装
+1. 从[官网](https://www.navicat.com.cn/products/)下载 Navicat Premium 16 并安装
 
-二、破解
+2. 以管理员身份打开[注册机](..\files\navicat16Cracker.zip)，Applied Path 选择安装目录根路径后点击 Patch。成功之后，提示是否将 rsa 私钥导出来，导不导都无所谓。此时注册机不要关闭
 
-1、以管理员身份打开[注册机](..\files\navicat16Cracker.zip)，Applied Path 选择安装目录根路径后点击Patch。成功之后，提示是否将rsa私钥导出来，导不导都无所谓。此时注册机不要关闭
+3. 断网后启动 navicat，试用提醒界面点击注册。
 
-2、断网后启动navicat，试用提醒界面点击注册。
+4. 在注册机上点击 Generate 生成注册码并填入 navicat，点击激活后在弹出的页面选择手动激活。
 
-3、在注册机上点击 Generate 生成注册码并填入navicat，点击激活后在弹出的页面选择手动激活。
+5. 将请求码复制到注册机后点击生成激活码
 
-4、将请求码复制到注册机后点击生成激活码。
-
-5、将激活码复制回navicat再点击激活即可。
+6. 将激活码复制回 navicat 再点击激活即可
 
 
 
+### JDK
+
+#### 安装配置
+
+1. 从[官网](https://www.oracle.com/technetwork/java/javase/downloads/index.html)下载 JDK 程序包并解压
+
+2. 配置系统环境变量
+
+    - 新建 JAVA_HOME 变量 ，变量值填写 JDK 的安装目录(例如 `D:\Insert\JDK\jdk1.8.0`)
+
+    - 新建 CLASSPATH 变量，变量值填写 `.;%JAVA_HOME%\lib;%JAVA_HOME%\lib\tools.jar`(jdk1.8)
+
+    - 到 path 变量添加 `%JAVA_HOME%\bin;%JAVA_HOME%\jre\bin;` jdk11及新版本为 `%JAVA_HOME%\bin\`
+
+ > 注意：如果重启后检查 java 版本发现没有配置到 java 环境，则直接将路径配置到 path 变量中
+
+3. 重启操作系统，运行 cmd 输入 java -version，若显示版本信息，则说明安装和配置成功
+
+
+
+#### 更改 JDK 之后若无法启动 eclipse
+
+可以修改 eclipse 安装目录下的 eclipse.ini 的 JDK 路径
+
+```properties
+JAVA_HOME=D:\root\profession\install\JDK\jdk_11
+CLASSPATH=.;D:\root\profession\install\JDK\jdk_11\lib
+```
+
+
+
+#### JDK11 生成 JRE
+
+1、用 cmd 打开 JDK 目录
+
+2、运行以下命令会在 JDK 目录生成 JRE
+
+```shell
+bin\jlink.exe --module-path jmods --add-modules java.desktop --output jre
+```
+
+
+
+### Idea
+
+#### 安装
+
+1. 从[官网](http://www.jetbrains.com/idea/download/#section=windows) 下载程序包
+2. 解压版的 Idea 并解压即可
+
+3. 把 jar 包 JetbrainsCrack.jar，把它放到你认为合适的文件夹内
+
+4. 在 Idea 程序目录下的  `\bin\.vmoptions` 文件中添加如下内容并保存
+  - Mac:         -javaagent:/Users/neo/JetbrainsCrack.jar
+  - Linux:        -javaagent:/home/neo/JetbrainsCrack.jar
+  - Windows:  -javaagent:C:\Users\neo\JetbrainsCrack.jar
+5. 打开 Idea 并使用激活码激活
+6. 完成
+
+
+
+#### 配置 Maven
+1. File -> Settings -> Build，Excution，Deployment -> Build Tools -> Maven
+2. 设置 Maven home directory
+3. 设置 User setting files，选中Override 选择 maven home 目录下的 conf/settings.xml
+4. 设置 Local Repository，为本地 maven 仓库目录
+
+
+
+#### 兼容的 Maven 版本
+- Idea 2022 兼容maven 3.8.1及之前的所用版本
+- Idea 2021 兼容maven 3.8.1及之前的所用版本
+- Idea 2020 兼容Maven 3.6.3及之前所有版本
+- Idea 2018 兼容Maven3.6.1及之前所有版本
+
+
+
+#### 汉化
+
+1. 去 github 搜索 [jetbrains-in-chinese](https://github.com/pingfangx/jetbrains-in-chinese) ，找到对应的产品和版本号下载汉化文件
+2. 将汉化文件放到软件安装路径下的 lib 目录中，重启软件即可
+3. 完成
+
+
+
+#### 配置注释
+
+##### 类注释
+
+1. Settings -> Editor -> File and Code Templates
+
+2. 在左边的Files中选中Class
+
+3. 左边切到Includes 在File Header编辑框中，编写如下代码
+
+
+```java
+/**
+ * <b><code>${NAME}</code></b>
+ * <p/>
+ * ${description}
+ * <p/>
+ * <b>Creation Time:</b> ${DATE} ${TIME}
+ *
+ * @author yang xiong
+ * @since ${PROJECT_NAME} 0.1.0
+ */
+```
+
+
+
+##### 方法注释
+
+1. Settings -> Editor -> Live Templates -> 点击右边+号 -> Template Group 
+
+2. 输入CommentGroup
+
+3. 选择CommentGroup -> 点击右边+号 -> Live Template
+
+4. Abbreviation 输入*, Expand with选择Tab
+
+5. Define 勾选java
+
+6. Template text输入
+
+
+```java
+*
+ * @description: //TODO
+ $param$
+ $return$
+ * @throws 
+ * @author yang xiong
+ * @date $date$ $time$
+ **/
+```
+
+ $param$
+
+不带类型
+
+```
+groovyScript("def result='';def params=\"${_1}\".replaceAll('[\\\\[|\\\\]|\\\\s]', '').split(',').toList();      for(i = 0; i < params.size(); i++) {         result += '* @param: ' + params[i] + ((i < params.size() - 1) ? '\\n ' : '')     };      return result;" , methodParameters())
+```
+
+带类型
+
+```
+groovyScript(
+    "def result=''; 
+    def params=\"${_1}\".replaceAll('[\\\\[|\\\\]|\\\\s]', '').split(',').toList(); 
+    def paramTypes=\"${_2}\".replaceAll('[\\\\[|\\\\]|\\\\s]', '').split(',').toList(); 
+    for(i = 0; i < params.size(); i++) {
+        def types = paramTypes[i].split('\\\\.').toList(); 
+        if(params[i].size() > 0){
+            result += '* @param: ' + params[i] + ' - [' + types[types.size()-1] + ']' + ((i < params.size() - 1) ? '\\n ' : '')
+        }else{
+            result += '* @param: ' + params[i] + ' ' + types[types.size()-1] + ((i < params.size() - 1) ? '\\n ' : '')
+        }
+    }; 
+    return result;"
+, methodParameters(), methodParameterTypes())
+```
+
+$return$
+
+```
+groovyScript("def returnType = \"${_1}\"; def result = '* @return: ' + returnType; return result;", methodReturnType());
+```
+
+
+
+### Maven
+
+#### 安装配置
+
+1. [官网](https://maven.apache.org/download.cgi)下载 Maven 程序包
+
+2. 解压 Maven 程序包
+
+3. 配置 %MAVEN_HONE%\bin; 环境变量
+
+4. 重启操作系统，启动console，输入mvn –v
+
+5. 配置 conf/settings.xml
+     - 配置本地仓库 localRepository
+
+6. 配置 Maven 编译 Java 版本
+
+   ```xml
+   <profile>
+    <id>jdk-1.8</id>
+    <activation>
+    <activeByDefault>true</activeByDefault>
+    <jdk>1.8</jdk>
+    </activation>
+    <properties>
+      <maven.compiler.source>1.8</maven.compiler.source>
+      <maven.compiler.target>1.8</maven.compiler.target>
+      <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+    </properties>
+   </profile>
+   ```
+
+7. 配置远程仓库地址
+
+   ```xml
+   <mirror>
+   　　<id>aliyunmaven</id>
+   　　<mirrorOf>central</mirrorOf>
+   　　<name>aliyun maven</name>
+   　　<url>http://maven.aliyun.com/nexus/content/repositories/central/</url>
+   </mirror>
+   ```
+
+
+
+#### 问题
+
+##### role: org.apache.maven.model.validation.ModelValidator
+
+解决 IDEA 版本和 Maven 版本不符合，试图降低 Maven 版本
+
+
+
+##### Cannot resolve plugin org.apache.maven.plugins:maven-site-plugin:3.8.1
+
+在本地 repo 目录中找到 org/apache/maven/plugins/，删除目录下的 maven-resources-plugin，然后重新导入让它自动下载
 
 
 
@@ -241,67 +469,21 @@ taskkill -PID 进程号 -F
 
 
 
-## Maven
-
-### 安装配置
-
-一、下载apache-maven(下载地址http://maven.apache.org/download.cgi）然后解压
-
-二、配置Maven
-
-​		1、创建maven本地库的文件夹mvnRespo
-
-​		2、修改maven根文件夹下\conf\setting.xml文件中的localRepository，将其值指定为mvnRespo的路径
-
-​		3、修改maven根文件夹下\conf\setting.xml文件中的<profile>为当前使用的jre版本，修改如下	
-
-<profile>
-
-<id>jdk-1.8</id>
-<activation>
-<activeByDefault>true</activeByDefault>
-<jdk>1.8</jdk>
-</activation>
-<properties>
-<maven.compiler.source>1.8</maven.compiler.source>
-<maven.compiler.target>1.8</maven.compiler.target>
-<maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
-</properties>
-</profile>
-
-​		4、修改镜像
 
 
 
-​		5、添加MAVAN相关的环境变量
 
-​				在环境变量中添MAVEN_HOME，值为maven根文件夹
+## 文件名大小写敏感
 
-​				在变量PATH中添加  %MAVEN_HOME%\bin\
-
-​		6、验证maven是否安装成功
-
-​				重启操作系统，启动console，输入mvn –v，查看mvn信息，判断是否正确配置maven
-
-
-
-### 问题
-
-#### role: org.apache.maven.model.validation.ModelValidator
-
-解决 IDEA 版本和 Maven 版本不符合，试图降低 Maven 版本
-
-
-
-#### Cannot resolve plugin org.apache.maven.plugins:maven-site-plugin:3.8.1
-
-在本地 repo 目录中找到 org/apache/maven/plugins/，删除目录下的 maven-resources-plugin，然后重新导入让它自动下载
+```shell
+fsutil.exe file SetCaseSensitiveInfo "C:\Users\Juan\Desktop" disable
+```
 
 
 
 # Linux
 
-### 常用命令
+## 常用命令
 
 #### 用户用户组
 
@@ -653,6 +835,66 @@ sudo umount /mnt/
 VBoxManage modifyvm "VM name" --natdnshostresolver1 on
 VBoxManage modifyvm "VM name" --natdnsproxy1 on
 ```
+
+
+
+## JDK
+
+[Java Downloads | Oracle 中国](https://www.oracle.com/cn/java/technologies/downloads/)
+
+
+
+一. 下载 jdk-11_linux-x64_bin.tar.gz 并解压 (tar -xzvf) -C到 /opt/install/
+
+```sh
+# 解压文件
+sudo tar -xzvf jdk-17.0.4.1_linux-x64_bin.tar.gz -C /opt/jdk/
+sudo mv /opt/jdk/jdk-17.0.4.1 /opt/jdk/17.0.4.1
+# 创建符号链接指向最新版
+sudo ln -s /opt/jdk/17.0.4.1 /opt/jdk/jdk
+
+# 编辑文件 /etc/profile 
+export JAVA_HOME="/opt/jdk/jdk"
+export PATH=$PATH:$JAVA_HOME/bin
+# jdk1.8配置如下
+export JAVA_HOME="/opt/jdk/jdk"
+export CLASSPATH=.:$JAVA_HOME/jre/lib/rt.jar:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
+export PATH=$PATH:$JAVA_HOME/bin
+
+# 使用环境变量生效，不必重新登录
+source /etc/profile
+
+# 使用以下命令检查环境值
+echo $JAVA_HOME
+# output:/opt/jdk/jdk
+
+# 配置为系统上的默认设置
+sudo update-alternatives --install "/usr/bin/java" "java" "/opt/jdk/jdk/bin/java" 1
+sudo update-alternatives --install "/usr/bin/javac" "javac" "/opt/jdk/jdk/bin/javac" 1
+# jdk1.8
+# sudo update-alternatives --install "/usr/bin/javaws" "javaws" "/opt/jdk/jdk/bin/javaws" 1
+
+# 更正可执行文件的权限和所有权
+sudo chmod a+x /usr/bin/java
+sudo chmod a+x /usr/bin/javac
+# sudo chmod a+x /usr/bin/javaws
+sudo chown -R root: /opt/jdk/
+
+# 选择默认 JDK
+update-alternatives --config java
+# 如果您看到以下消息:
+# There is only one alternative in link group java (providing /usr/bin/java): /opt/jdk/jdk/bin/java
+# 这意味着您以前从未安装过 Java, 您刚才已经安装了它
+# 如果您看到另一条消息, 其中包含要选择的 java 版本, 则您之前已安装了另一个 java 版本
+
+# 验证 JDK 版本
+java -version
+java version "17.0.4.1" 2022-08-18 LTS
+Java(TM) SE Runtime Environment (build 17.0.4.1+1-LTS-2)
+Java HotSpot(TM) 64-Bit Server VM (build 17.0.4.1+1-LTS-2, mixed mode, sharing)
+```
+
+
 
 
 
@@ -31423,106 +31665,6 @@ kubectl
 
 
 # Java
-
-
-
-## Linux 系统安装
-
-[Java Downloads | Oracle 中国](https://www.oracle.com/cn/java/technologies/downloads/)
-
-### debian 10 安装 JDK 17
-
-一. 下载 jdk-11_linux-x64_bin.tar.gz 并解压 (tar -xzvf) -C到 /opt/install/
-
-```sh
-# 解压文件
-sudo tar -xzvf jdk-17.0.4.1_linux-x64_bin.tar.gz -C /opt/jdk/
-sudo mv /opt/jdk/jdk-17.0.4.1 /opt/jdk/17.0.4.1
-# 创建符号链接指向最新版
-sudo ln -s /opt/jdk/17.0.4.1 /opt/jdk/jdk
-
-# 编辑文件 /etc/profile 
-export JAVA_HOME="/opt/jdk/jdk"
-export PATH=$PATH:$JAVA_HOME/bin
-# jdk1.8配置如下
-export JAVA_HOME="/opt/jdk/jdk"
-export CLASSPATH=.:$JAVA_HOME/jre/lib/rt.jar:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
-export PATH=$PATH:$JAVA_HOME/bin
-
-# 使用环境变量生效，不必重新登录
-source /etc/profile
-
-# 使用以下命令检查环境值
-echo $JAVA_HOME
-# output:/opt/jdk/jdk
-
-# 配置为系统上的默认设置
-sudo update-alternatives --install "/usr/bin/java" "java" "/opt/jdk/jdk/bin/java" 1
-sudo update-alternatives --install "/usr/bin/javac" "javac" "/opt/jdk/jdk/bin/javac" 1
-# jdk1.8
-# sudo update-alternatives --install "/usr/bin/javaws" "javaws" "/opt/jdk/jdk/bin/javaws" 1
-
-# 更正可执行文件的权限和所有权
-sudo chmod a+x /usr/bin/java
-sudo chmod a+x /usr/bin/javac
-# sudo chmod a+x /usr/bin/javaws
-sudo chown -R root: /opt/jdk/
-
-# 选择默认 JDK
-update-alternatives --config java
-# 如果您看到以下消息:
-# There is only one alternative in link group java (providing /usr/bin/java): /opt/jdk/jdk/bin/java
-# 这意味着您以前从未安装过 Java, 您刚才已经安装了它
-# 如果您看到另一条消息, 其中包含要选择的 java 版本, 则您之前已安装了另一个 java 版本
-
-# 验证 JDK 版本
-java -version
-java version "17.0.4.1" 2022-08-18 LTS
-Java(TM) SE Runtime Environment (build 17.0.4.1+1-LTS-2)
-Java HotSpot(TM) 64-Bit Server VM (build 17.0.4.1+1-LTS-2, mixed mode, sharing)
-```
-
-
-
-### Windows 10 安装 JDK 17
-
-一、下载在https://www.oracle.com/technetwork/java/javase/downloads/index.html下载 JDK 二进制压缩包并解压
-
-二、配置系统环境变量
-
-​		新建 JAVA_HOME 变量 ，变量值填写jdk的安装目录(例如 D:\Insert\JDK\jdk1.8.0)
-
-​		新建 CLASSPATH 变量，变量值填写 .;%JAVA_HOME%\lib;%JAVA_HOME%\lib\tools.jar(jdk1.8)
-
-​		到path变量添加%JAVA_HOME%\bin;%JAVA_HOME%\jre\bin;(jdk11为%JAVA_HOME%\bin\)
-
-> 注意：如果重启后检查 java 版本发现没有配置到 java 环境，则直接将路径配置到 path 变量中
-
-三、检验是否配置成功
-
-​		重启操作系统，运行cmd 输入 java -version (java 和 -version 之间有空格)，若显示版本信息 则说明安装和配置成功
-
-四、更改jdk之后若无法启动eclipse,可以修改eclipse安装目录下的eclipse.ini的jdk路径
-
-​		JAVA_HOME
-
-​				D:\root\profession\install\JDK\jdk_11
-
-​		CLASSPATH
-
-​				.;D:\root\profession\install\JDK\jdk_11\lib
-
-五、jdk11生成jre
-
-​		1、用CMD打开jdk目录
-
-​		2、运行
-
-```
-bin\jlink.exe --module-path jmods --add-modules java.desktop --output jre
-```
-
-​				会在jdk目录生成jre目录
 
 
 
