--- a/C1/P3/笔记.MD
+++ b/C1/P3/笔记.MD
@@ -1535,6 +1535,7 @@ private String remark2;
 sudo cat /sidata02/k8slog/188.5.20.59_20221201.log | head -n 10
 sudo wc -l /sidata02/k8slog/188.5.20.59_202212*.log
 sudo wc -l /sidata02/k8slog/k8sOperationFor_pov-hansoc.202212*.txt
+sudo wc -l /sidata02/k8slog/k8sOperationFor_pov-hansoc.2023*.txt | grep -E '202301|202302|202303'
 sudo wc -l /sidata02/k8slog/auth.202212*.log
 sudo ls -l /sidata02/k8slog | grep 'auth.202212'
 sudo wc -l /sidata02/k8slog/oper.202212*.log
@@ -1664,8 +1665,8 @@ select
         when status = 1 then '正常'
         else '未知'
     end as 状态,
-    created_time as 创建日期,
-    activity_time as 最后活跃日期
+    to_char(created_time,'yyyy-mm-dd hh24:mi:ss') as 创建日期,
+    to_char(activity_time,'yyyy-mm-dd hh24:mi:ss') as 最后活跃日期
 from(
     select
         user_join.username as username,
@@ -1710,8 +1711,8 @@ select
         when status = 1 then '正常'
         else '未知'
     end as 状态,
-    created_time as 创建日期,
-    activity_time as 最后活跃日期,
+    to_char(created_time,'yyyy-mm-dd hh24:mi:ss') as 创建日期,
+    to_char(activity_time,'yyyy-mm-dd hh24:mi:ss') as 最后活跃日期
     permission_name as 拥有权限
 from(
     select
