--- a/C1/P3/笔记.MD
+++ b/C1/P3/笔记.MD
@@ -818,6 +818,38 @@ SQL> @V:\Users\chensen\Desktop\temp\D_HX_TICKET_FIELD.sql
 
 
 
+# 常用 SQL
+
+## Oracle
+
+### 业务小类 ID 转 OID
+
+```sql
+SELECT 
+    SERVICE_RY_CATEGORY_OID, SUB_CATEGORY1, SUB_CATEGORY1_NAME, SUB_CATEGORY4, SUB_CATEGORY4_NAME 
+FROM GDSIGNAL.D_SERVICE_RY_CATEGORY 
+WHERE 
+    STATUS = 1 
+    AND SERVICE_CATEGORY_FACTORY = 4
+    AND (
+        (SUB_CATEGORY1 = 5 AND SUB_CATEGORY4 IN (17,6,2,14,16,3,65,61,96,7609,95,71))
+        OR
+        (SUB_CATEGORY1 = 23 AND SUB_CATEGORY4 IN (1,19056,10))
+    )
+```
+
+
+
+
+
+## PG
+
+
+
+
+
+
+
 # 22生产环境：
 
 | 镜像名称  | 分配端口 | cpu | ram | 版本|
