--- a/C1/P3/笔记.MD
+++ b/C1/P3/笔记.MD
@@ -1247,6 +1247,14 @@ HANTELE_SOC_KHZB2_20221009184955.csv
 
 # 金库
 
+## 申请理由
+
+互联网端到端分析平台对报备号码进行敏感模块进行功能测试，工单号：CMCC-GD-TYGZ-20230417-00394
+
+互联网端到端分析平台取数，表：F_HX_JS_GAME_5M，工单号：CMCC-GD-TYGZ-20230417-00397
+
+
+
 sit: 188.5.20.59:24596/tm/swagger-ui.html
 
 ![企业微信截图_16703070715236](/home/fs-user/Documents/WXWork/1688851899034928/Cache/Image/2022-12/企业微信截图_16703070715236.png)
