--- a/C1/P3/笔记.MD
+++ b/C1/P3/笔记.MD
@@ -1698,6 +1698,7 @@ select
     remarks[3] as 中文名,
     username as 账号名,
     email as 邮箱,
+    phone as 手机号,
     remarks[2] as 组织,
     sensitive as 类型,
     case
@@ -1708,17 +1709,18 @@ select
         else '未知'
     end as 状态,
     to_char(created_time,'yyyy-mm-dd hh24:mi:ss') as 创建日期,
-    to_char(activity_time,'yyyy-mm-dd hh24:mi:ss') as 最后活跃日期
+    to_char(last_activity_time,'yyyy-mm-dd hh24:mi:ss') as 最后活跃日期
 from(
     select
         user_join.username as username,
         user_join.email as email,
+        user_join.phone as phone,
         user_join.status as status,
         regexp_split_to_array(user_join.remark,'\|') as remarks,
         case when login_join.last_login is null
             then user_join.created_time
             else login_join.last_login
-        end as activity_time,
+        end as last_activity_time,
         user_join.created_time as created_time,
         case when groups_join.user_id is null
             then '普通'
@@ -1733,7 +1735,7 @@ from(
         select username,max(created_time) as last_login from gar_logs where status = 1 group by username
     )login_join
     on user_join.username=login_join.username
-)temp order by username, activity_time asc
+)temp order by username, last_activity_time asc
 
 ```
 
