--- a/C1/P3/笔记.MD
+++ b/C1/P3/笔记.MD
@@ -4,6 +4,8 @@
 
 sujuan2/Sj1001@!
 
+litian2/G0m3c0c7*
+
 dwlitaicong/Cmgd_0404
 
 dwzhoujunwei/Cmgd_0404
@@ -1251,7 +1253,7 @@ HANTELE_SOC_KHZB2_20221009184955.csv
 
 ## 申请理由
 
-互联网端到端分析平台对报备号码进行敏感模块进行功能测试，工单号：CMCC-GD-TYGZ-20230420-00160
+互联网端到端分析平台对报备号码进行敏感模块进行功能测试，工单号：CMCC-GD-TYGZ-20230423-00197
 
 互联网端到端分析平台取数，表：F_HX_JS_GAME_5M，工单号：CMCC-GD-TYGZ-20230417-00397
 
