--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -17160,6 +17160,8 @@ public class User {
 5.编写mapper
 
 ```java
+@Mapper
+@Reposiroty
 public interface IUserMapper extends BaseMapper<User> {
 }
 
