--- a/C1/P3/笔记.MD
+++ b/C1/P3/笔记.MD
@@ -20,7 +20,7 @@ dwyangxiong/Cmgd_0404
 
 dwlinqiuping/Cmgd_0404
 
-dwguojiaxin3/Cmgd_2023
+dwguojiaxin3/Cmgd_0515
 
 
 
@@ -45,6 +45,8 @@ rI5#zEwx7DFJ
 8wE4mXMccuut#
 
 1aA!2bB@3cC#
+
+2bB!3cC@4dD#
 
 dwlitaicong/XcpIa8t-nx6g
 
@@ -383,6 +385,8 @@ mstsc
 192.168.108.97 chensen/Richstone123!
 
 192.168.108.97 administrator/Hfs@2021h!
+
+192.168.108.97 gempile/Richstone123!
 
 192.168.108.97 gempile2/Richstone123!
 
@@ -1253,7 +1257,7 @@ HANTELE_SOC_KHZB2_20221009184955.csv
 
 ## 申请理由
 
-互联网端到端分析平台对报备号码进行敏感模块进行功能测试，工单号：CMCC-GD-TYGZ-20230423-00197
+互联网端到端分析平台对报备号码进行敏感模块进行功能测试，工单号：CMCC-GD-TYGZ-20230608-00127
 
 互联网端到端分析平台取数，表：F_HX_JS_GAME_5M，工单号：CMCC-GD-TYGZ-20230417-00397
 
@@ -1577,10 +1581,11 @@ private String remark2;
 /var/log/soap_auth.log
 /var/log/soap_oper.log
 sudo cat /sidata02/k8slog/188.5.20.59_20221201.log | head -n 10
-sudo wc -l /sidata02/k8slog/188.5.20.59_202212*.log
+sudo wc -l /sidata02/k8slog/188.5.20.59_202305*.log
+wc -l /opt/app/garnet/logs/202305/188.5.20.59_202305*.log
 sudo wc -l /sidata02/k8slog/k8sOperationFor_pov-hansoc.202212*.txt
 sudo wc -l /sidata02/k8slog/k8sOperationFor_pov-hansoc.2023*.txt | grep -E '202301|202302|202303'
-sudo wc -l /sidata02/k8slog/auth.202212*.log
+sudo wc -l /sidata02/k8slog/auth.202305*.log
 sudo ls -l /sidata02/k8slog | grep 'auth.202212'
 sudo wc -l /sidata02/k8slog/oper.202212*.log
 sudo ls -l /sidata02/k8slog | grep 'oper.202212'
@@ -1808,6 +1813,12 @@ from(
 
 
 
+## 从 auth 日志提取为 excel
+
+
+
+
+
 # devops
 
 #### 97安装代理软件
@@ -1955,6 +1966,7 @@ INSERT INTO "gar_groups_roles" ("group_id", "group_name", "group_type", "role_id
 ```sql
 
 
-INSERT INTO "gar_roles_permissions" ("permission_id", "permission_name", "permission_operation", "role_id", "role_name", "role_type") VALUES (355, '专题分析', 'VIEW', 314, '通用功能模块角色-移动', 1);
+INSERT INTO "gar_roles_permissions" ("permission_id", "permission_name", "permission_operation", "role_id", "role_name", "role_type") VALUES (778, '详单查询-详单分析', 'VIEW', 318, '个性化功能角色-移动组', 1);
+INSERT INTO "gar_roles_permissions" ("permission_id", "permission_name", "permission_operation", "role_id", "role_name", "role_type") VALUES (779, '详单查询-详单分析- 4/5G融合详单分析', 'VIEW', 318, '个性化功能角色-移动组', 1);
 ```
 
