--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -1114,9 +1114,13 @@ java.lang.OutOfMemoryError: Java heap space
 
 #### 相关 JVM 参数
 
--Xmx size
+-Xmx size 设置最大堆大小
 
 -Xmx8m
+
+-Xms size 设置初始堆大小
+
+-Xms8m
 
 
 
