--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -926,6 +926,16 @@ Java HotSpot(TM) 64-Bit Server VM (build 17.0.4.1+1-LTS-2, mixed mode, sharing)
 
 
 
+## 启动时执行脚本
+
+root 用户在 /etc/ 目录下新增 rc.local 文件，然后给文件添加执行权限。
+
+```shell
+#!/bin/sh
+nohup  /opt/nginx/sbin/nginx  &  
+exit 0
+```
+
 
 
 # JVM
