--- a/C1/P3/笔记.MD
+++ b/C1/P3/笔记.MD
@@ -1,3 +1,5 @@
+
+
 # 账号
 
 ## 4A
@@ -94,6 +96,10 @@ sujuan2/Ydmgrz123!!!
 WHAT_OP_APP_ID:"app" AND WHAT_OP_CONT:"应用日志|" AND NOT WHEREFROM_DEV_SIP_STR:""
 容器日志查询语句；
 WHAT_OP_APP_ID:"app" AND WHAT_OP_CONT:"容器日志|" AND NOT WHEREFROM_DEV_SIP_STR:"业务感知分析"
+
+WHAT_OP_APP_ID:"unix" AND WHERETO_DEV_DIP_STR:"188.5.75.156" 
+
+WHERE_DEV_IP_STR:"188.5.75.156" 
 
 
 
@@ -226,7 +232,8 @@ admin@123
 
 
 
-
+省公司|广东公司-第三方人员|蔡文豪|CMCC-GD-ZHGL-20211109-00031|已离职
+省公司|广东公司-第三方人员|陈嘉琳|CMCC-GD-ZHGL-20220804-00002|已离职
 
 
 
@@ -1598,12 +1605,20 @@ private String remark2;
 /var/log/soap_oper.log
 /opt/app/garnet/logs/202306/
 sudo cat /sidata02/k8slog/188.5.20.59_20221201.log | head -n 10
+sudo cat /var/log/soap_auth.log | grep 'Jun'
+sudo cat /var/log/soap_auth.log | head -n 1
+sudo cat /var/log/soap_auth.log | tail -n 1
+sudo cat /var/log/soap_oper.log | grep 'Jun'
+sudo cat /var/log/soap_oper.log | head -n 1
+sudo cat /var/log/soap_oper.log | tail -n 1
 sudo wc -l /sidata02/k8slog/188.5.20.59_202306*.log
 wc -l /opt/app/garnet/logs/202305/188.5.20.59_202305*.log
 sudo wc -l /sidata02/k8slog/k8sOperationFor_pov-hansoc.202212*.txt
 sudo wc -l /sidata02/k8slog/k8sOperationFor_pov-hansoc.2023*.txt | grep -E '202301|202302|202303'
+sudo ls /sidata02/k8slog/
 sudo wc -l /sidata02/k8slog/auth.202305*.log
 sudo ls -l /sidata02/k8slog | grep 'auth.202212'
+sudo ls -l /sidata02/k8slog/oper*.log
 sudo wc -l /sidata02/k8slog/oper.202212*.log
 sudo ls -l /sidata02/k8slog | grep 'oper.202212'
 ```
@@ -1936,6 +1951,16 @@ git config --global http.sslverify false
 
 
 
+#### 前端构建
+
+```shell
+unzip -o cmgde2eas-fe.zip
+mv `unzip -l cmgde2eas-fe.zip | awk '{if(NR == 4){ print $4}}'` cmgde2eas-fe
+
+mkdir cmgde2eas-fe
+tar zxvf cmgde2eas-fe.tar.gz -C cmgde2eas-fe --strip-components 1
+```
+
 
 
 # 诺基亚容器云镜像推送
@@ -1981,9 +2006,15 @@ INSERT INTO "gar_groups_roles" ("group_id", "group_name", "group_type", "role_id
 ## 授权
 
 ```sql
+预生产
+通用功能模块角色-运维 315
 
+生产
+通用功能模块角色-运维 315
+通用功能模块角色-移动 314
+自有业务角色 329
 
-INSERT INTO "gar_roles_permissions" ("permission_id", "permission_name", "permission_operation", "role_id", "role_name", "role_type") VALUES (778, '详单查询-详单分析', 'VIEW', 318, '个性化功能角色-移动组', 1);
-INSERT INTO "gar_roles_permissions" ("permission_id", "permission_name", "permission_operation", "role_id", "role_name", "role_type") VALUES (779, '详单查询-详单分析- 4/5G融合详单分析', 'VIEW', 318, '个性化功能角色-移动组', 1);
+INSERT INTO "gar_roles_permissions" ("permission_id", "permission_name", "permission_operation", "role_id", "role_name", "role_type") VALUES (784, '统计报表-5G SA-业务分析-头部视频业务IP维度TCP指', 'VIEW', 314, '通用功能模块角色-移动', 1);
+INSERT INTO "gar_roles_permissions" ("permission_id", "permission_name", "permission_operation", "role_id", "role_name", "role_type") VALUES (786, '统计报表-5G MR小区统计指标报表', 'VIEW', 329, '自有业务角色', 1);
 ```
 
