--- a/C1/P3/笔记.MD
+++ b/C1/P3/笔记.MD
@@ -1605,8 +1605,8 @@ private String remark2;
 /var/log/soap_oper.log
 /opt/app/garnet/logs/202306/
 sudo cat /sidata02/k8slog/188.5.20.59_20221201.log | head -n 10
-sudo cat /var/log/soap_auth.log | grep '^Apr'
-sudo cat /var/log/soap_oper.log | grep '^Apr'
+sudo cat /var/log/soap_auth.log | fgrep 'Jun'
+sudo cat /var/log/soap_oper.log | fgrep 'Jun'
 sudo wc -l /sidata02/k8slog/188.5.20.59_202304*.log
 wc -l /opt/app/garnet/logs/202305/188.5.20.59_202304*.log
 sudo wc -l /sidata02/k8slog/k8sOperationFor_pov-hansoc.202212*.txt
@@ -2022,3 +2022,8 @@ INSERT INTO "gar_roles_permissions" ("permission_id", "permission_name", "permis
 INSERT INTO "gar_roles_permissions" ("permission_id", "permission_name", "permission_operation", "role_id", "role_name", "role_type") VALUES (786, '统计报表-5G MR小区统计指标报表', 'VIEW', 329, '自有业务角色', 1);
 ```
 
+
+
+# 一键分析
+
+188.5.20.59:24599/cmgde2eas-fe/#/analysis-platform/index
