--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -738,6 +738,17 @@ Linux下还有一个特殊的文件/dev/null，它就像一个无底洞，所有
 
 
 
+### curl
+
+```shell
+# 安装
+sudo apt install curl
+
+
+```
+
+
+
 
 ## 安装 debian10 虚拟机
 
