--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -540,6 +540,7 @@ fsutil.exe file SetCaseSensitiveInfo "C:\Users\Juan\Desktop" disable
 ```sh
 #添加mysql用户(,-s )
 sudo useradd -r -g appgroup -s /bin/bash mysql
+sudo useradd -g root -s /bin/bash -m young
 # -c：加上备注文字，备注文字保存在passwd的备注栏中
 # -d：指定用户登入时的主目录，替换系统默认值/home/<用户名>
 # -D：变更预设值
@@ -29245,4 +29246,174 @@ git push <远程主机名> <本地分支名>
 ### Github IP
 
 20.205.243.166
+
+
+
+# 运维
+
+## 命令工具
+
+### wget
+
+```shell
+# -c 断点续传
+wget -c url
+# -O 下载并以不同的文件名保存
+wget -O alias_name url 
+# -b 后台下载
+wget -b url
+# 查看后台下载进度
+tail -f wget-log
+# 测试下载链接是否有效
+wget –spider url
+```
+
+
+
+## 存储
+
+```shell
+# 查看所有分区的大小
+fdisk -l
+```
+
+
+
+## 网络
+
+### 内网穿透
+
+[参考](https://www.bilibili.com/read/cv24453460)
+
+
+
+#### 简介
+
+FRP是Fast Reverse Proxy的缩写，它是一款开源、高性能、跨平台的内网穿透工具。 FRP允许您通过安全地穿透NAT和防火墙来访问您的本地服务器，以便您可以从任何地方访问您的应用程序和服务。它的工作方式是将来自互联网的请求转发给本地网络中的应用程序，从而使应用程序看起来好像直接在互联网上运行。
+
+
+
+#### 基本环境
+
+可以有公网IP的实体机（比如vps等） 目标设备（就是你内网中的机器）
+
+
+
+#### 版本
+
+[下载 frp](https://github.com/fatedier/frp/releases/download/v0.51.2/frp_0.51.2_linux_amd64.tar.gz)
+
+查看相应的架构型号，按照不同型号下载不同把版本
+
+```shell
+arch
+# X86_64
+# 如果是“X86_64“即可选择”amd64”
+```
+
+
+
+#### 服务端部署
+
+##### 安装配置
+
+下载 frp 安装包并解压
+
+关注下面几个文件
+
+frps
+
+frps.ini
+
+frpc
+
+frpc.ini 前两文件，s结尾代表server，分别是服务端程序和服务端配置文件，
+
+后两个文件，c结尾代表client。分别是客户端程序和客户端配置文件。
+
+我们当前操作的是服务端（也就说，公网服务作为部署frp的服务端）
+
+编辑配置 frps.ini
+
+```properties
+[common]
+# 于客户端和服务端连接的端口
+bind_port = 7000 
+authentication_timeout = 0
+# 服务端 web 页面的端口，如 7500 端口，在配置完成服务启动后可以通过浏览器访问 x.x.x.x:7500 （其中x.x.x.x为公网服务的IP）查看frp服务运行信息
+dashboard_port = 7500
+
+# 服务端加了 客户端必须添加，也可以都不设置
+token = token 
+
+dashboard_user = frp
+dashboard_pwd = Senna&frp@P1
+# 可自定义，用于反向代理 HTTP 主机时使用
+vhost_http_port = 10080
+# 可自定义，用于反向代理 HTTPS 主机时使用
+vhost_https_port = 10443
+
+# 子域名
+# subdomain_host = frp.com 
+
+# 自定义404 页面，绝对路径
+#custom_404_page = /frp/404.html 
+```
+
+##### 启动
+
+```shell
+nohup ./frps -c frps.ini > /home/young/frp.log 2>&1 &
+# 查看任务
+jobs -l
+```
+
+
+
+#### 客户端
+
+##### 安装配置
+
+下载 frp 安装包并解压
+
+编辑配置 frpc.ini
+
+```properties
+[common]
+# 公网 ip 地址，vps
+server_addr = 1.12.251.106
+# frp 服务的 bind_port
+server_port = 7000 
+token = token
+
+[mysql]
+# tcp/http/https
+# 没有域名情况下使用 tcp
+type = tcp
+local_ip = 127.0.0.1
+# 本地服务端口
+local_port = 3306
+# 远程访问端口
+remote_port = 3306 
+
+# 有域名配置
+[web]
+type = http
+local_ip = 127.0.0.1
+local_port = 80
+remote_port = 80
+custom_domains = www.demo1.com
+```
+
+
+
+##### 启动
+
+```shell
+nohup ./frpc -c frpc.ini > /home/young/frp.log 2>&1 &
+# 查看任务
+jobs -l
+```
+
+
 
