--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -529,6 +529,12 @@ fsutil.exe file SetCaseSensitiveInfo "C:\Users\Juan\Desktop" disable
 
 
 
+## 缺少 VCRUNTIME140.dll
+
+安装 Visual C++ Redistributable 2015
+
+
+
 # Linux
 
 ## 常用命令
